update travis to test the code to different ruby versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,36 @@
-sudo: false
 language: ruby
+script: rspec spec -f d
+
+install:
+  - gem update bundler
+  - bundle install
+
 rvm:
-  - 2.3.0
-before_install: gem install bundler -v 1.14.6
+  - 1.9
+  - 2.0.0
+  - 2.1.1
+  - 2.1.2
+  - 2.2.2
+  - 2.3.1
+  - 2.4.1
+
+  - jruby-18mode
+  - jruby-19mode
+  - ree
+
+  - ruby-head
+  - jruby-head
+
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-head
+
+env:
+  global:
+    - VERBOSE=true
+    - TIMEOUT=1
+
+branches:
+  only:
+    - master
